# nnn

./: .gitignore  README.md  agent.py  config.py  llm.py  main.py  orchestrator.py  package-lock.json  package.json  pyproject.toml  tools.py
agents/: __init__.py  architect.py  bug_fixer.py  developer.py  researcher.py  web_searcher.py
nnn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nnn_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
website/: .gitignore  package-lock.json  package.json
website/.npm/_npx/9547b02e757197ef/: package-lock.json  package.json
website/app/: app.vue
website/app/components/: AgentDeck.vue  CardSwap.vue  Dither.vue  GridMotion.vue  PrismaticBurst.vue  SpatialFlower.vue
