[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nnn"
version = "0.1.0"
description = "Multi-agent coding system powered by local LLMs"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx",
    "rich",
]

[project.scripts]
nnn = "main:main"

[tool.setuptools]
py-modules = ["main", "orchestrator", "llm", "agent", "config", "tools"]
packages = ["agents"]
